add some basic component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<hello name="{{ name }}"></hello>
+<app-top-bar></app-top-bar>
+<router-outlet></router-outlet>
+<!-- Routed components go here -->
 <p>
   Start editing to see some magic happen :)
 </p>
