the cat api work, but so broken

--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -29,5 +29,7 @@
 </ngb-carousel> -->
 
 <div class='col-sm-12 text-center'>
-  <img [src]="image" class="img-fluid" alt="cat or dog">
+  <img [src]="image" class="img-fluid" alt="cat or dog"> <br> <br>
+  <button (click)="requestData()" type="button" class="btn btn-primary btn-lg"> MEOW !!!</button>
+  <p> {{this.fulljsonStr}}</p>
 </div>
