1 file modified - WIP: breed table

--- a/src/app/gallery-with-dog/gallery-with-dog.component.html
+++ b/src/app/gallery-with-dog/gallery-with-dog.component.html
@@ -5,13 +5,59 @@
 </div>
 
 <div class="row ">
-  <h3>Breed info: </h3>
+  <div class="col-sm-12">
+
+  <!-- <h3>Breed info: </h3>
   <p> Breed Name:  </p>
   <p> Breed For:  </p>
   <p> Breed Group:  </p>
   <p> Temperament:  </p>
   <p> Life Span:  </p>
-  <p> Original: </p>
+  <p> Original: </p> -->
+
+  <table class="table">
+  <!-- <thead>
+    <tr>
+      <th scope="col">#</th>
+      <th scope="col">First</th>
+      <th scope="col">Last</th>
+      <th scope="col">Handle</th>
+    </tr>
+  </thead> -->
+  <tbody>
+    <tr>
+      <th scope="row">Breed Name:</th>
+      <td>Ma asdasd asda sd rkljk;klkljkl asd asd asd asd asd asd asd asd as dasasdasda  adasd sda sda dd dddddd dd ddddvdd </td>
+
+    </tr>
+    <tr>
+      <th scope="row">Breed For:</th>
+      <td>Jacob</td>
+
+    </tr>
+    <tr>
+      <th scope="row">Breed Group:</th>
+      <td>Larry</td>
+    </tr>
+
+    <tr>
+      <th scope="row">Temperament</th>
+      <td>Larry</td>
+    </tr>
+
+    <tr>
+      <th scope="row">Life Span:</th>
+      <td>Larry</td>
+    </tr>
+
+    <tr>
+      <th scope="row">Original</th>
+      <td>Larry</td>
+    </tr>
+  </tbody>
+</table>
+
+  </div>
 </div>
 
 </div>
