3 files modified - WIP - live dog api worked

--- a/src/app/gallery-with-dog/gallery-with-dog.component.html
+++ b/src/app/gallery-with-dog/gallery-with-dog.component.html
@@ -18,7 +18,7 @@
   <p> Life Span:  </p>
   <p> Original: </p> -->
 
-  <table class="table">
+  <table class="table" *ngIf="breedinfo">
   <!-- <thead>
     <tr>
       <th scope="col">#</th>
