4 files modified DONE: it work as expect, not beatiful those

--- a/src/app/gallery-with-dog/gallery-with-dog.component.html
+++ b/src/app/gallery-with-dog/gallery-with-dog.component.html
@@ -1,7 +1,8 @@
 <div class="container">
 <div class="row">
   <div class="col-sm-12 text-center">
-  <button (click)="requestData()" type="button" class="btn btn-primary btn-lg"> MEOW !!!</button>
+  <button (click)="requestData()" type="button" class="btn btn-primary btn-lg"> Woof Woof !!!</button>
+  <br><br>
   </div>
 <div class="col-sm-12">
   <img [src]="image" alt="Cinque Terre" class='img-fluid'>
