--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>Home, it does nothing</p>
+<!-- <p>Home, it does nothing</p> -->
+
+<div class='row'>
+  <div class='col-sm-6 '>
+    <a [routerLink]="['/cat']" class="btn btn-primary btn-lg float-right">Cat</a>
+  </div>
+  <div class='col-sm-6 text-left'>
+    <a [routerLink]="['/dog']" class="btn btn-primary btn-lg float-left">Dog</a>
+  </div>
+</div>
